# csv_scanner

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
src/: main.rs  ui.rs
