[package]
name = "csv-searcher"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = [
    "wgpu",
    "tokio",
    "sipper",
] }
rfd = { version = "0.15", features = [
    "tokio",
    "xdg-portal",
], default-features = false }
tokio = { version = "1.48.0", features = ["fs"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
